syntax = "proto3";

package saas.v1alpha1;

import "saas/v1alpha1/repo_version_id.proto";

message AgentIdentifier {
  oneof id {
    RepoVersionId repo_version_id = 2;
    string digest = 3;
  }
}